findbugs fixes and improvements.